# stress_postgres

./: devices_clientIds.npy  pyproject.toml  temp.sql
src/: atomic_counter.py  executor.py  main.py  worker.py
src/loaders/: loader_a_ids.py  loader_client_ids.py  loader_hashes.py
